monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4098/A4098.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4098;

grammar A4098 extends de.monticore.grammar.cocos.invalid.A4098.A4098Super{

  Foo = "foo";

}
